pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-024-backslash_escapes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/024-backslash_escapes.md
---

[33mfoo
[0m
