pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-034-entity_and_numeric_character_references.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/034-entity_and_numeric_character_references.md
---

[33m[48;5;236mfoo[K[0m
