pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-048-thematic_breaks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/048-thematic_breaks.md
---

[33m[48;5;236m***[K[0m
