pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-066-atx_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/066-atx_headings.md
---
]1337;SetMark\
[94m[104m [0m[1m[97m[104mfoo [0m[1m[3m[97m[104mbar[0m[1m[97m[104m [0m[1m[97m[104m*baz[0m[1m[97m[104m*[0m[94m[104m [0m
